# giga-factory

./: .env.example  .gitignore  ANALYTICS_COMPARISON.md  GIGAFACTORY_ANALYTICS_README.md  README.md  WARP.md  batter_production_miner.py  battery_production_event_log.csv  gigafactory_data_designer.py  gigafactory_operational_analytics.py  gigafactory_synthetic_data.csv  process_mining_analysis.py  pyproject.toml  requirements.txt  synthetic_data.py  test_api_key.py  test_env.py  test_polymorphic_schema.py  validate_enhancements.py
